--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Events/Add.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Events/Add.cshtml
@@ -69,7 +69,7 @@
             </div>
             <div class="box-footer">
                 <button class="btn btn-primary pull-right" id="btn-add-event">Lưu</button>
-                <a href="/" class="btn btn-danger pull-right margin-r-5">Hủy</a>
+                <a href="@Url.Action("Index","Events")" class="btn btn-danger pull-right margin-r-5">Hủy</a>
             </div>
         </div>
 
