--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/SystemAdmin/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/SystemAdmin/Index.cshtml
@@ -1,8 +1,147 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Quản lý tài khoản";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@model CapstoneProjectAdmin.Models.RegisterViewModel
 
+<div class="container">
+    <div class="ibox float-e-margins">
+        <div class="ibox-title">
+            <div class="row">
+                <h2 class="col-sm-10">Quản lý tài khoản người quản lý sự kiện</h2>
+                <div class="col-sm-2">
+                    <button class="btn btn-custom" type="submit" data-toggle="modal" data-target="#addAdminModal" style="margin-top:20px">
+                        <i class="fa fa-plus" style="margin-right:7px" aria-hidden="true"></i>Thêm
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="ibox-content">
+            <table class="table table-hover table-bordered" id="tblAdmin">
+                <thead>
+                    <tr>
+                        <th>Tên</th>
+                        <th>Số điện thoại</th>
+                        <th>Email</th>
+                        <th>Chức năng</th>
+                    </tr>
+                </thead>
+            </table>
+        </div>
+
+
+    </div>
+
+</div>
+
+<!--Modal Add Admin-->
+<div class="modal fade" id="addAdminModal" role="dialog">
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Thêm người tham gia</h4>
+            </div>
+
+            <div class="modal-body">
+                @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                {
+                    @Html.AntiForgeryToken()
+
+                    @Html.ValidationSummary("", new { @class = "text-danger" })
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.Username, new { @class = "col-md-3 control-label" })
+                        <div class="col-md-9">
+                            @Html.TextBoxFor(m => m.Username, new { @class = "form-control" })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.Email, new { @class = "col-md-3 control-label" })
+                        <div class="col-md-9">
+                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.TelephoneNumber, new { @class = "col-md-3 control-label" })
+                        <div class="col-md-9">
+                            @Html.TextBoxFor(m => m.TelephoneNumber, new { @class = "form-control" })
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        @*<input type="submit" class="btn btn-default" value="Register" />*@
+                        <button id="btnAddGuest" type="submit" class="btn btn-primary">Thêm</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Hủy bỏ</button>
+                    </div>
+                   
+                }
+
+            </div>
+
+
+        </div>
+
+    </div>
+</div>
+@section scripts {
+    <script>
+
+        $(document).ready(function () {
+            InitAdminDatatable();
+        });
+
+        function InitAdminDatatable() {
+            $('#tblAdmin').DataTable({
+                "oLanguage": {
+                    "sSearch": "Tìm kiếm",
+                    "oPaginate": {
+                        "sFirst": "Trang đầu",
+                        "sLast": "Trang cuối",
+                        "sNext": "Trang kế",
+                        "sPrevious": "Trang trước"
+                    },
+                    "sInfoEmpty": "",
+                    "sInfo": "Hiển thị từ dòng _START_ tới _END_ trong tổng số _TOTAL_ dòng",
+                    "sZeroRecords": "Không có dữ liệu",
+                    "sLengthMenu": "Hiển thị _MENU_ dòng"
+                },
+                ajax: {
+                    url: '@Url.Action("GetAdmin", "SystemAdmin")',
+                    //dataSrc: ""
+                },
+                columns: [
+                    {
+                        name: "UserName",
+                        render: function (data, type, row) {
+                            return row.UserName;
+                        }
+                    },
+                    {
+                        name: "PhoneNumber",
+                        render: function (data, type, row) {
+                            return row.PhoneNumber;
+                        }
+                    },
+                    {
+                        name: "Email",
+                        render: function (data, type, row) {
+                            return row.Email;
+                        }
+                    },
+                    {
+                        name: "Function",
+                        render: function (data, type, row) {
+                            return '<button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#updateGuestModal" onclick="openModelUpdate(' + row.Id + ', \'' + row.UserName + '\', \'' + row.PhoneNumber + '\', \'' + row.Email + '\')"><i class="fa fa-pencil"></i></button>     ' +
+                                '<button class="btn btn-danger btn-sm btn-delete" onclick="deleteGuest(' + row.Id + ')"><i class="fa fa-trash"></i></button>';
+                        }
+                    }
+                ]
+            });
+        }
+
+    </script>
+}
 
